Fixed timing and added a clear for the wrong/right answers so they don't overlap.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,13 +87,13 @@ button code {
 .btn:hover {
     box-shadow: 0px 1px 3px 0px #02121f;
     color: #4399db;
-    transition: .4s;
+    transition: .3s;
 }
 
 .btn:active {
     box-shadow: none;
     background-color: rgba(31, 81, 120, 0.6);
-    transition: .4s;
+    transition: .3s;
 }
 
 /*—————————————————————————————————————————————————  
@@ -147,15 +147,18 @@ Question STYLES
     display: none;
 }
 
+.question-2 {
+    display: none;
+}
+
 
 /*—————————————————————————————————————————————————  
 Feedback STYLES
 —————————————————————————————————————————————————*/
 .feedback {
     color: rgba(255, 255, 255, 0.85);
-    padding-top: 1rem;
     font-size: 28px;
-    border-top: #101010 1px solid;
+    margin-top: 2.5rem;
 }
 
 .feedback--correct-color {
@@ -167,9 +170,13 @@ Feedback STYLES
 }
 
 #correctFeedback {
+    border-top: #101010 1px solid;
+    padding-top: 1rem;
     display: none;
 }
 
 #wrongFeedback {
+    border-top: #101010 1px solid;
+    padding-top: 1rem;
     display: none;
 }
